# cpp-embedded-python

./: .gitignore  CMakeLists.txt  README.md  bootstrap.py
src/: CMakeLists.txt  main.cpp  pyobject_wrapper.h  sources.cmake  wrap_python.h
src/python/: demo.py  download.py  main.py  some_file.py  utils.py
src/python/test_module/: another_file.py  test_module_main.py
